--- a/sneaker/CSS/Index.css
+++ b/sneaker/CSS/Index.css
@@ -2,6 +2,9 @@
     padding: 0px;
     margin: 0px;
 }
+.logoShop{
+    width: 125px;
+}
 body {
     font-size: 16px;
     font-family: Helvetica, Sans-Serif;
